app_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  rules:
    - host: "foo.bar.com"
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: python-app-k8s-service
              port:
                number: 80
